--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@
           <h5 class="header col s12 light">Find Events near you</h5>
         </div>
         <div class="row center">
-          <a id="download-button" class="btn-large waves-effect waves-light teal lighten-1" ng-click="open_signup()">Sign up now!</a>
+          <a id="download-button" class="btn-large waves-effect waves-light teal lighten-1" ng-if="loggedin" ng-click="open_signup()">Sign up now!</a>
         </div>
         <br><br>
 
@@ -198,6 +198,7 @@
                 right ">more_vert</i></span>
               <div class="mycards ">
                 <a class="waves-effect waves-light btn modal-trigger " ng-click="join_now(eventCard) " href="#join_now ">JOIN NOW!</a>
+                <a class="waves-effect waves-light btn modal-trigger " ng-click="" href="#join_now "><i class="material-icons">delete_forever</i></a>
               </div>
             </div>
             <div class="card-reveal ">
