--- a/index2.html
+++ b/index2.html
@@ -77,7 +77,7 @@
   <!-- Modal for create event -->
   <div id="createEvent" class="modal modal-fixed-footer">
     <div class="modal-header">
-      <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat right ">X</a>
+      <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat right">X</a>
     </div>
     <div align="center" class="modal-content">
       <h4>Create Event</h4>
@@ -183,36 +183,36 @@
 
   <!--------------------------------->
 
-  <div class="container1 ">
-    <div class="section ">
+  <div class="container1">
+    <div class="section">
 
       <!--   Icon Section   -->
-      <div class="row " >
-        <div class="col s3 " ng-repeat="eventCard in eventCards ">
-          <div class="card " >
-            <div class="card-image waves-effect waves-block waves-light ">
-              <img class="activator " ng-src="images/{{eventCard.imageURL}} ">
+      <div class="row" >
+        <div class="col s3" ng-repeat="eventCard in eventCards">
+          <div class="card" >
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" ng-src="images/{{eventCard.imageURL}}">
             </div>
-            <div class="card-content ">
-              <span class="card-title activator grey-text text-darken-4 ">{{eventCard.eventName}}<i class="material-icons
-                right ">more_vert</i></span>
-              <div class="mycards ">
-                <a class="waves-effect waves-light btn modal-trigger " ng-click="join_now(eventCard) " href="#join_now ">JOIN NOW!</a>
-                <a class="waves-effect waves-light btn modal-trigger " ng-click="" ng-if="loggedin" href="#join_now "><i class="material-icons">delete_forever</i></a>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">{{eventCard.eventName}}<i class="material-icons
+                right">more_vert</i></span>
+              <div class="mycards">
+                <a class="waves-effect waves-light btn modal-trigger" ng-click="join_now(eventCard)" href="#join_now">JOIN NOW!</a>
+                <a class="waves-effect waves-light btn modal-trigger" ng-click="deleteEvent(eventCard)" ng-if="loggedin"><i class="material-icons">delete_forever</i></a>
               </div>
             </div>
-            <div class="card-reveal ">
-              <span class="card-title grey-text text-darken-4 ">{{eventCard.eventName}}<i class="material-icons right ">close</i></span>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">{{eventCard.eventName}}<i class="material-icons right">close</i></span>
               <p>{{eventCard.eventDesc}}</p>
             </div>
           </div>
           <!-------------------------------------------for join now models----------------------->
-          <div id="{{eventCard._id}} " class="modal ">
-            <div class="modal_for_login ">
-              <div class="modal-header ">
-                <a href="#! " class="modal-action modal-close waves-effect waves-red btn-flat right ">X</a>
+          <div id="{{eventCard._id}}" class="modal">
+            <div class="modal_for_login">
+              <div class="modal-header">
+                <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat right">X</a>
               </div>
-              <div class="modal-content ">
+              <div class="modal-content">
 
                 <p>Event Name:{{eventCard.eventName}}</p>
                 <p>Date:{{eventCard.eventDate}}</p>
@@ -222,9 +222,9 @@
 
 
               </div>
-              <div class="modal-footer ">
-                <div class="login_button ">
-                  <button class="waves-effect waves-red btn " type="submit " ng-click=" ">Join Event</button>
+              <div class="modal-footer">
+                <div class="login_button">
+                  <button class="waves-effect waves-red btn" type="submit" ng-click=" ">Join Event</button>
                 </div>
               </div>
             </div>
@@ -241,28 +241,28 @@
 
 
 
-      <footer class="page-footer teal ">
-        <div class="container ">
-          <div class="row ">
-            <div class="col l6 s12 ">
-              <h5 class="white-text ">Footer Content</h5>
-              <p class="grey-text text-lighten-4 ">You can use rows and columns here to organize your footer content.</p>
+      <footer class="page-footer teal">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">Footer Content</h5>
+              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
             </div>
-            <div class="col l4 offset-l2 s12 ">
-              <h5 class="white-text ">Links</h5>
+            <div class="col l4 offset-l2 s12">
+              <h5 class="white-text">Links</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3 " href="#! ">Link 1</a></li>
-                <li><a class="grey-text text-lighten-3 " href="#! ">Link 2</a></li>
-                <li><a class="grey-text text-lighten-3 " href="#! ">Link 3</a></li>
-                <li><a class="grey-text text-lighten-3 " href="#! ">Link 4</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="footer-copyright ">
-          <div class="container ">
+        <div class="footer-copyright">
+          <div class="container">
             © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right " href="#! ">More Links</a>
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
           </div>
         </div>
       </footer>
@@ -270,12 +270,12 @@
 
 
       <!--  Scripts-->
-      <script src="https://code.jquery.com/jquery-2.1.1.min.js "></script>
-      <script src="js/materialize.js "></script>
-      <script src="js/init.js "></script>
-      <script src="angular.min.js "></script>
-      <script src="index.js "></script>
-      <script src="actions.js "></script>
+      <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script src="js/materialize.js"></script>
+      <script src="js/init.js"></script>
+      <script src="angular.min.js"></script>
+      <script src="index.js"></script>
+      <script src="actions.js"></script>
 
 </body>
 
