--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
 </head>
 
 <body ng-controller="displayController">
-  <nav class="white" role="navigation">
+  <nav class="teal lighten-3" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">EventFy</a>
       <ul class="right hide-on-med-and-down">
@@ -97,55 +97,55 @@
               <input type="number" id="eventCapacity" ng-model="eventDetails.eventCapacity" class="validate">
               <label for="eventCapacity" data-error="wrong" data-success="right">Event Capacity</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="date" id="eventDate" ng-model="eventDetails.eventDate" class="validate">
               <label for="eventDate" data-error="wrong" data-success="right">Event Date</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="text" id="eventDesc" ng-model="eventDetails.eventDesc" class="validate">
               <label for="eventDesc" data-error="wrong" data-success="right">Event Description</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="text" id="eventID" ng-model="eventDetails.eventID" class="validate">
               <label for="eventID" data-error="wrong" data-success="right">Event ID</label>
             </div>
-             <div class="input-field col s12">
-              <input  type="text" id="imageURL" ng-model="eventDetails.imageURL" class="validate">
+            <div class="input-field col s12">
+              <input type="text" id="imageURL" ng-model="eventDetails.imageURL" class="validate">
               <label for="imageURL" data-error="wrong" data-success="right">Event Image URL</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="text" id="eventVerified" ng-model="eventDetails.eventVerified" class="validate">
               <label for="eventVerified" data-error="wrong" data-success="right">Is event verified</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="text" id="eventVisible" ng-model="eventDetails.eventVisible" class="validate">
               <label for="eventVisible" data-error="wrong" data-success="right">Is event visible</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="number" id="locLat" ng-model="eventDetails.locLat" class="validate">
               <label for="locLat" data-error="wrong" data-success="right">Event Location Latitute</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="number" id="LocLong" ng-model="eventDetails.locLong" class="validate">
               <label for="LocLong" data-error="wrong" data-success="right">Event Location Longitude</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="text" id="eventName" ng-model="eventDetails.eventName" class="validate">
               <label for="eventName" data-error="wrong" data-success="right">Event Name</label>
             </div>
-             <div class="input-field col s12">
-              <input  type="text" id="eventType" ng-model="eventDetails.eventType" class="validate">
+            <div class="input-field col s12">
+              <input type="text" id="eventType" ng-model="eventDetails.eventType" class="validate">
               <label for="eventType" data-error="wrong" data-success="right">Event Type</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="number" id="visibility" ng-model="eventDetails.visibility" class="validate">
               <label for="visibility" data-error="wrong" data-success="right">Event Visibility in Miles</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="time" id="eventTime" ng-model="eventDetails.eventTime" class="validate">
               <label for="eventTime" data-error="wrong" data-success="right">Event Time</label>
             </div>
-             <div class="input-field col s12">
+            <div class="input-field col s12">
               <input type="number" id="tenure" ng-model="eventDetails.tenure" class="validate">
               <label for="tenure" data-error="wrong" data-success="right">Event Visibility tenure in hours</label>
             </div>
@@ -192,122 +192,141 @@
   <div class="container1">
     <div class="section">
 
-      <!--   Icon Section   -->
-      <div class="row" >
-        <div class="col s3" ng-repeat="eventCard in eventCards">
-          <div class="card" >
-            <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" ng-src="images/{{eventCard.imageURL}}">
-            </div>
-            <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">{{eventCard.eventName}}<i class="material-icons
+      <div class="row">
+        <div class="col s12">
+          <ul class="tabs">
+            <li class="tab col s3"><a class="active" href="#show_card">Near by Events </a></li>
+            <li class="tab col s3"><a href="#view_map">Map View for Near By Events</a></li>
+            <li class="tab col s3"><a href="">Remote Events</a></li>
+            <li class="tab col s3"><a href="">Map View For Remote Events</a></li>
+          </ul>
+        </div>
+        <!--<div id="test1" class="col s12">Test 1</div>-->
+        <!-- <div id="#view_map" class="col s12"></div>-->
+
+        <div id="test4" class="col s12"></div>
+
+
+
+
+        <!--   Icon Section   -->
+        <div id="show_card">
+          <div class="row">
+            <div class="col s3" ng-repeat="eventCard in eventCards">
+              <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img class="activator" ng-src="images/{{eventCard.imageURL}}">
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4">{{eventCard.eventName}}<i class="material-icons
                 right">more_vert</i></span>
-              <div class="mycards">
-                <a class="waves-effect waves-light btn modal-trigger" ng-click="join_now(eventCard)" href="#join_now">JOIN NOW!</a>
-                <a class="waves-effect waves-light btn modal-trigger" ng-click="deleteEvent(eventCard)" ng-if="loggedin"><i class="material-icons">delete_forever</i></a>
+                  <div class="mycards">
+                    <a class="waves-effect waves-light btn modal-trigger" ng-click="join_now(eventCard)" href="#join_now">JOIN NOW!</a>
+                    <a class="waves-effect waves-light btn modal-trigger" ng-click="deleteEvent(eventCard)" ng-if="loggedin"><i class="material-icons">delete_forever</i></a>
+                  </div>
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4">{{eventCard.eventName}}<i class="material-icons right">close</i></span>
+                  <p>{{eventCard.eventDesc}}</p>
+                </div>
               </div>
-            </div>
-            <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">{{eventCard.eventName}}<i class="material-icons right">close</i></span>
-              <p>{{eventCard.eventDesc}}</p>
-            </div>
-          </div>
-          <!-------------------------------------------for join now models----------------------->
-          <div id="{{eventCard._id}}" class="modal">
-            <div class="modal_for_login">
-              <div class="modal-header">
-                <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat right">X</a>
-              </div>
-              <div class="modal-content">
+              <!-------------------------------------------for join now models----------------------->
+              <div id="{{eventCard._id}}" class="modal">
+                <div class="modal_for_login">
+                  <div class="modal-header">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat right">X</a>
+                  </div>
+                  <div class="modal-content">
 
-                <p>Event Name:{{eventCard.eventName}}</p>
-                <p>Date:{{eventCard.eventDate}}</p>
-                <p>Time:{{eventCard.eventTime}}</p>
-                <p>Type:{{eventCard.eventType}}</p>
-                <p>Description:{{eventCard.eventDesc}}</p>
+                    <p>Event Name:{{eventCard.eventName}}</p>
+                    <p>Date:{{eventCard.eventDate}}</p>
+                    <p>Time:{{eventCard.eventTime}}</p>
+                    <p>Type:{{eventCard.eventType}}</p>
+                    <p>Description:{{eventCard.eventDesc}}</p>
 
 
-              </div>
-              <div class="modal-footer">
-                <div class="login_button">
-                  <button class="waves-effect waves-red btn" type="submit" ng-click=" ">Join Event</button>
+                  </div>
+                  <div class="modal-footer">
+                    <div class="login_button">
+                      <button class="waves-effect waves-red btn" type="submit" ng-click=" ">Join Event</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
+
+
+
           </div>
         </div>
-        <h1>Marker Cluster</h1>
-        <hr />
-        <ng-map center="[-26.6875847,135.0857733]" style="height: 480px;" zoom="4">
-          <div ng-repeat="pos in points">
-            <marker  position="{{pos.latitude}}, {{pos.longitude}}" on-click="pinClicked(this)">
-          </div>
-        </ng-map>
 
-
+        <div id="view_map">
+          <ng-map center="[-26.6875847,135.0857733]" style="height: 480px;" zoom="4">
+            <div ng-repeat="pos in points">
+              <marker position="{{pos.latitude}}, {{pos.longitude}}" on-click="pinClicked(this)"></marker>
+            </div>
+          </ng-map>
+        </div>
       </div>
+      <!--row div ends -->
+    </div>
+  </div>
 
 
 
 
 
 
-
-
-
-      <footer class="page-footer teal">
-        <div class="container">
-          <div class="row">
-            <div class="col l6 s12">
-              <h5 class="white-text">Footer Content</h5>
-              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Links</h5>
-              <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-              </ul>
-            </div>
-          </div>
+  <footer class="page-footer teal">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Eventfy</h5>
+          <p class="grey-text text-lighten-4">The easiest way to schedule and organize all your events! From casual events to formal study or work sessions,
+            let Eventfy help you manage it all.</p>
         </div>
-        <div class="footer-copyright ">
-          <div class="container ">
-            <a class="grey-text text-lighten-4 right " href="#! ">More Links</a>
+        <div class="col l4 offset-l2 s12">
+
+
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright ">
+      <div class="container ">
+        <a class="grey-text text-lighten-4 right " href="#! "></a>
         <div class="footer-copyright">
           <div class="container">
             © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            <a class="grey-text text-lighten-4 right" href="#!"></a>
           </div>
         </div>
-      </footer>
+  </footer>
+
+  </div>
+  </div>
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js "></script>
+  <script src="js/materialize.js "></script>
+  <script src="js/init.js "></script>
+  <script src="angular.min.js "></script>
+  <script src="index.js "></script>
+  <script src="actions.js "></script>
+  <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/testapp/scripts/markers.js"></script>
+  <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/testapp/scripts/markerclusterer.js"></script>
+  <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/testapp/script-tags-for-development.js"></script>
+  <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
+  <script src="https://code.angularjs.org/1.3.15/angular.js"></script>
+  <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
 
 
-
-      <!--  Scripts-->
-      <script src="https://code.jquery.com/jquery-2.1.1.min.js "></script>
-      <script src="js/materialize.js "></script>
-      <script src="js/init.js "></script>
-      <script src="angular.min.js "></script>
-      <script src="index.js "></script>
-      <script src="actions.js "></script>
-      <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/testapp/scripts/markers.js"></script>
-      <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/testapp/scripts/markerclusterer.js"></script>
-      <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/testapp/script-tags-for-development.js"></script>
-      <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
-      <script src="https://code.angularjs.org/1.3.15/angular.js"></script>
-      <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
-
-</div>
-    </div>
-      <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script src="js/materialize.js"></script>
-      <script src="js/init.js"></script>
-      <script src="angular.min.js"></script>
-      <script src="index.js"></script>
-      <script src="actions.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+  <!--<script src="angular.min.js"></script>-->
+  <script src="index.js"></script>
+  <script src="actions.js"></script>
 
 </body>
+
 </html>
