--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,7 @@
           <h5 class="header col s12 light">Find Events near you</h5>
         </div>
         <div class="row center">
-          <a id="download-button" class="btn-large waves-effect waves-light teal lighten-1" ng-if="loggedin" ng-click="open_signup()">Sign up now!</a>
+          <a id="download-button" class="btn-large waves-effect waves-light teal lighten-1" ng-if="!loggedin" ng-click="open_signup()">Sign up now!</a>
         </div>
         <br><br>
 
@@ -196,9 +196,9 @@
         <div class="col s12">
           <ul class="tabs">
             <li class="tab col s3"><a class="active" href="#show_card">Near by Events </a></li>
-            <li class="tab col s3"><a href="#view_map">Map View for Near By Events</a></li>
+            <li class="tab col s3"><a href="">Map View for Near By Events</a></li>
             <li class="tab col s3"><a href="">Remote Events</a></li>
-            <li class="tab col s3"><a href="">Map View For Remote Events</a></li>
+            <li class="tab col s3"><a href="#view_map">Map View For Remote Events</a></li>
           </ul>
         </div>
         <!--<div id="test1" class="col s12">Test 1</div>-->
@@ -316,16 +316,16 @@
   <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/testapp/scripts/markerclusterer.js"></script>
   <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/testapp/script-tags-for-development.js"></script>
   <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
-  <script src="https://code.angularjs.org/1.3.15/angular.js"></script>
+  <!--<script src="https://code.angularjs.org/1.3.15/angular.js"></script>-->
   <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
 
 
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <!--<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->
+  <!--<script src="js/materialize.js"></script>-->
+  <!--<script src="js/init.js"></script>-->
   <!--<script src="angular.min.js"></script>-->
-  <script src="index.js"></script>
-  <script src="actions.js"></script>
+  <!--<script src="index.js"></script>-->
+  <!--<script src="actions.js"></script>-->
 
 </body>
 
