--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,6 @@
   <meta name="keywords" content="ng-map,AngularJS,center">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
-
 </head>
 
 <body ng-controller="displayController">
@@ -196,7 +195,7 @@
         <div class="col s12">
           <ul class="tabs">
             <li class="tab col s3"><a class="active" href="#show_card">Near by Events </a></li>
-            <li class="tab col s3"><a href="#view_map">Map View for Near By Events</a></li>
+            <li class="tab col s3" on-click ="resizeMap()" ><a href="#view_map">Map View for Near By Events</a></li>
             <li class="tab col s3"><a href="">Remote Events</a></li>
             <li class="tab col s3"><a href="">Map View For Remote Events</a></li>
           </ul>
@@ -260,9 +259,12 @@
           </div>
         </div>
 
-        <div id="view_map">
-          <ng-map center="[-26.6875847,135.0857733]" style="height: 480px;" zoom="4">
-            <div ng-repeat="pos in points">
+
+
+
+        <div id="view_map" >
+          <ng-map center="[-26.6875847,135.0857733]" zoom="4">
+            <div ng-repeat="pos in points" ng-if="$parent.render">
               <marker position="{{pos.latitude}}, {{pos.longitude}}" on-click="pinClicked(this)"></marker>
             </div>
           </ng-map>
@@ -324,8 +326,14 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <!--<script src="angular.min.js"></script>-->
+
   <script src="index.js"></script>
   <script src="actions.js"></script>
+  <script src="https://maps.google.com/maps/api/js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui/0.4.0/angular-ui.js"></script>
+
 
 </body>
 
