--- a/index2.html
+++ b/index2.html
@@ -111,14 +111,14 @@
               <input type="text" id="imageURL" ng-model="eventDetails.imageURL" class="validate">
               <label for="imageURL" data-error="wrong" data-success="right">Event Image URL</label>
             </div>
-            <div class="input-field col s12">
+            <!--div class="input-field col s12">
               <input type="text" id="eventVerified" ng-model="eventDetails.eventVerified" class="validate">
               <label for="eventVerified" data-error="wrong" data-success="right">Is event verified</label>
-            </div>
-            <div class="input-field col s12">
+            </div-->
+            <!--div class="input-field col s12">
               <input type="text" id="eventVisible" ng-model="eventDetails.eventVisible" class="validate">
               <label for="eventVisible" data-error="wrong" data-success="right">Is event visible</label>
-            </div>
+            </div-->
             <div class="input-field col s12">
               <input type="number" id="locLat" ng-model="eventDetails.locLat" class="validate">
               <label for="locLat" data-error="wrong" data-success="right">Event Location Latitute</label>
